--- a/Teamsite/Teamsite/Teamsite.csproj
+++ b/Teamsite/Teamsite/Teamsite.csproj
@@ -101,6 +101,7 @@
     <Content Include="Content\Images\IMG_20170131_100807.jpg" />
     <Content Include="Content\Images\IMG_20170131_100827.jpg" />
     <Content Include="Content\Images\lina.JPG" />
+    <Content Include="Content\Images\alpsten.JPG" />
     <Content Include="Content\Images\ppadminproj.jpg" />
     <Content Include="Content\Stylesheets\about.css" />
     <Content Include="Content\Stylesheets\footer.css" />
